# docuverse

./: .gitignore  Dockerfile  README.md  app.py  hello.py  pyproject.toml  requirements.txt  secrets.toml  styles.css
.streamlit/: config.toml
components/: header.py  history.py  local_storage.py  notes.py  style.css  upload_chat.py  utils.py
data/: conversations.db
docs/: contributing.md  deployment.md  getting_started.md  troubleshooting.md  user_guide.md
docs/technical_docs/: apis.md  architecture.md  components.md  database.md
index/: index_store.json
storage/: index_store.json
utils/: database.py  index_manager.py  query_engine.py  user_manager.py
