[project]
name = "docuverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.8",
    "llama-index>=0.12.16",
    "llama-index-embeddings-huggingface>=0.5.1",
    "llama-index-llms-groq>=0.3.1",
    "llama-index-readers-json>=0.3.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "python-pptx>=1.0.2",
    "streamlit>=1.42.0",
    "torch>=2.6.0",
    "transformers>=4.48.3",
]
